# autorunner

./: .gitignore  Cargo.toml  README.MD
.github/workflows/: rust.yml
docker/: Dockerfile
scripts/: daemon.sh  entry.sh
src/: config.rs  main.rs
src/actions/: fetcher.rs  mod.rs  repository.rs  types.rs
src/containers/: docker.rs  fetcher.rs  mod.rs
src/database/: connection.rs  mod.rs  seed.rs
src/utils/: mod.rs
