[package]
name = "autorunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.36.0"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde_json = "1.0.117"
zip = "2.1.3"
zip-extract = "0.1.3"
bytes = "1.6.0"
flate2= "1.0.19"
tar = "0.4.41"
nanoid = "0.4.0"
log = "0.4.21"
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }

